# scrag

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  README.md  VERSION_PR_DESCRIPTION.md  requirements.txt
.github/ISSUE_TEMPLATE/: epic.md  spike.md  task.md
config/: README.md  default.yml
deployment/: README.md
docs/: README.md
docs/api/: README.md
docs/guides/: README.md  development.md  getting-started.md  http-caching.md  (+1 more)
research/: README.md
scripts/: README.md
src/scrag/: README.md  main.py  pyproject.toml  readability_extractor.py
src/scrag/core/: __init__.py  pipeline.py
src/scrag/core/cache/: __init__.py  base.py
src/scrag/core/cli/: __init__.py  __main__.py  app.py
src/scrag/core/extractors/: __init__.py  async_extractor.py  base.py  newspaper_extractor.py  playwright_extractor.py  readability_extractor.py  selenium_extractor.py  web_render_base.py
src/scrag/core/pipeline/: __init__.py  stages.py
src/scrag/core/processors/: __init__.py  base.py  chunking.py
src/scrag/core/rag/: __init__.py  base.py  factory.py  pipeline.py  query.py
src/scrag/core/rag/embedders/: __init__.py  base.py  openai_embedder.py  sentence_transformer.py
src/scrag/core/rag/stages/: __init__.py  embed.py  index.py  retrieval.py
src/scrag/core/rag/stores/: __init__.py  base.py  file_store.py
src/scrag/core/storage/: __init__.py  base.py
src/scrag/core/utils/: __init__.py  cache.py  config.py  headers.py  utils.py
src/scrag/extractors/: __init__.py  newspaper_extractor.py  readability_extractor.py
tests/: README.md  conftest.py
(+33 files in other folders)
