[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrag"
version = "0.1.0"
description = "Adaptive, multi-strategy web scraper for RAG pipelines and local LLM workflows"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
scrag = "core.cli:main"

[tool.setuptools.packages.find]
where = ["core"]
include = ["core*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["../../tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
