[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrag"
version = "0.1.0"
description = "Adaptive, multi-strategy web scraper for RAG pipelines and local LLM workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"typer>=0.12",
	"pyyaml>=6.0",
	"requests>=2.32",
	"beautifulsoup4>=4.12",
	"readability-lxml>=0.8",
	"newspaper3k>=0.2",
	"pytest>=8.4.2",
	"aiohttp>=3.10",
]

[project.optional-dependencies]
web-render = [
	"selenium>=4.15",
	"playwright>=1.40",
	"webdriver-manager>=4.0",
]

[project.scripts]
scrag = "core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["../../tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
